add seven definitions.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,65 @@
     <title>JavaScript Flashcards</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Definitions of key JavaScript terms</h1>
 
+      <div id="definition-hidden">
+        <p><span class="c1">JavaScript (JS)</span></p>
+      </div>
+
+      <div id="definition-showing">
+        <p><span class="c1">JavaScript (JS)</span>: A programming language readable by all browers used to add interactivity to websites.</p>
+      </div>
+
+      <div id="definition-hidden1">
+        <p><span class="c2">Operators</span></p>
+      </div>
+
+      <div id="definition-showing1">
+        <p><span class="c2">Operators</span>: Special characters in JavaScript that indicate an action to be performed</p>
+      </div>
+
+      <div id="definition-hidden2">
+        <p><span class="c3">Variables</span></p>
+      </div>
+
+      <div id="definition-showing2">
+        <p><span class="c3">Variables</span>: Variable means anything that can vary. JavaScript includes variables which hold the data value and it can be changed anytime.</p>
+      </div>
+
+      <div id="definition-hidden3">
+        <p><span class="c4">Variable naming conventions</span></p>
+      </div>
+
+      <div id="definition-showing3">
+        <p><span class="c4">Variable naming conventions</span>: Variables must begin with a letter, and be specific.</p>
+      </div>
+
+      <div id="definition-hidden4">
+        <p><span class="c5">Functions</span></p>
+      </div>
+
+      <div id="definition-showing4">
+        <p><span class="c5">Functions</span>: Code in JavaScript which performs a specific operation.</p>
+      </div>
+
+      <div id="definition-hidden5">
+        <p><span class="c6">Methods</span></p>
+      </div>
+
+      <div id="definition-showing5">
+        <p><span class="c6">Methods</span>: JavaScript methods are actions that can be performed on objects.</p>
+      </div>
+
+      <div id="definition-hidden6">
+        <p><span class="c7">Arguments</span></p>
+      </div>
+
+      <div id="definition-showing6">
+        <p><span class="c7">Arguments</span>: Are the specific parameters given to a function.</p>
+      </div>
+
+    </div>
   </body>
 </html>
